--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-# Exclude compiled Python objects.
-*.pyc
-*.pyo
+# Byte-compiled / optimized / DLL files
 __pycache__/
+*.py[cod]
 
 # Exclude OS X .DS_Store files.
 .DS_Store
