--- a/zapata/catalogue.yml
+++ b/zapata/catalogue.yml
@@ -33,8 +33,8 @@ C-GLORSv7:
 #
 ERA5_MM:
   remote: False
-  path: /Users/lovato/ERA5_MM
-  subtree: None 
+  path: /Users/lovato/ClimData/ERA5_MM
+  subtree: <var><lev>
   source_url: http://confluence.ecmwf.int/display/CKB/ERA5+data+documentation#ERA5datadocumentation-Parameterlistings
   description: ERA5 Monthly Mean on Pressure Levels
   year_bounds: [1979, 2018]
@@ -47,11 +47,12 @@ ERA5_MM:
       grid: {'x':1440, 'y':721, 'z':14}
       filename: <var>_<lev>_<year>_<mon>_MM.npy
       data_stream:
-         clim: 
+         monthly: 
            3D: [U, V, T, W]
            2D: [SLP]
 
-  # assumed to be contained in <path> 
+  # Places in <path> 
   metrics:
     lon: ERA5_quarter_global_lon.npy
     lat: ERA5_quarter_global_lat.npy
+    oro: ERA5_quarter_global_oro.npy
