--- a/zapata/catalogue.yml
+++ b/zapata/catalogue.yml
@@ -1,13 +1,13 @@
 C-GLORSv7:
   remote: True
   path: /data/products/GLOBAL_REANALYSES/C-GLORSv7/MONTHLY 
-  subtree: <year>
+  subtree:
   source_url: http://c-glors.cmcc.it/index/index.html
   description: Ocean Global Reanalyses at 1/4° resolution monthly means
   year_bounds: [1986, 2019]
   data_block: yearly
   data_format: 'netcdf'
-  levels: [ 0.505760014, 1.55585527, 2.66768169, 3.85627985, 5.14036131, 6.5430336, 8.09251881, 9.82275009, 11.7736797, 13.9910383, 16.525322, 19.4298019, 22.757616, 26.5583, 30.8745613, 35.7402039, 41.1800232, 47.211895, 53.8506355, 61.1128387, 69.0216827, 77.6111603, 86.9294281, 97.0413132, 108.030281, 120 133.075821, 147.40625, 163.164459, 180.549927, 199.789963, 221.141174, 244.890625, 271.356384, 300.887512, 333.862823, 370.688477, 411.793854, 457.62561, 508.639893, 565.292297, 628.026001, 697.258667, 773.368286, 856.678955, 947.447876, 1045.85425, 1151.99121, 1265.86145, 1387.37695, 1516.36365, 1652.56848, 1795.67078, 1945.29553, 2101.02661, 2262.42163, 2429.02515, 2600.38037, 2776.03931, 2955.57031, 3138.56494, 3324.64087, 3513.44556, 3704.65674, 3897.98193, 4093.15869, 4289.95264, 4488.15479, 4687.58105, 4888.06982, 5089.47852, 5291.68311, 5494.5752, 5698.06055, 5902.05762,]
+  levels: [0.505760014, 1.55585527, 2.66768169, 3.85627985, 5.14036131, 6.5430336, 8.09251881, 9.82275009, 11.7736797, 13.9910383, 16.525322, 19.4298019, 22.757616, 26.5583, 30.8745613, 35.7402039, 41.1800232, 47.211895, 53.8506355, 61.1128387, 69.0216827, 77.6111603, 86.9294281, 97.0413132, 108.030281, 120.0, 133.075821, 147.40625, 163.164459, 180.549927, 199.789963, 221.141174, 244.890625, 271.356384, 300.887512, 333.862823, 370.688477, 411.793854, 457.62561, 508.639893, 565.292297, 628.026001, 697.258667, 773.368286, 856.678955, 947.447876, 1045.85425, 1151.99121, 1265.86145, 1387.37695, 1516.36365, 1652.56848, 1795.67078, 1945.29553, 2101.02661, 2262.42163, 2429.02515, 2600.38037, 2776.03931, 2955.57031, 3138.56494, 3324.64087, 3513.44556, 3704.65674, 3897.98193, 4093.15869, 4289.95264, 4488.15479, 4687.58105, 4888.06982, 5089.47852, 5291.68311, 5494.5752, 5698.06055, 5902.05762,]
   # data
   components:
     ocn:
@@ -16,17 +16,21 @@ C-GLORSv7:
       grid: {'x':1442, 'y':1050, 'z':75}
       data_stream:
          grid_T:
-           3D: [vosaline votemper]
-           2D: [botemper sobotpre sofmmflx soheatc3 soheatct sohefldo sohfdamp solatent solongwa somixhgt somxl010 soqempoc sosaline sosaltco sosensib soshfldo sossheig sosstmax sosstmin sosstsst sowaflup sowfdamp sowindsp]
+           3D: [vosaline, votemper]
+           2D: [botemper, sobotpre, sofmmflx, soheatc3, soheatct, sohefldo, sohfdamp, solatent, solongwa, somixhgt, somxl010, soqempoc, sosaline, sosaltco, sosensib, soshfldo, sossheig, sosstmax, sosstmin, sosstsst, sowaflup, sowfdamp, sowindsp,]
+           coord_map: {'lon':'nav_lon', 'lat':'nav_lat', 'time':'time_centered', 'lev':'deptht',}
          grid_U:
-           3D: [vozocrtx]
-           2D: [sozocrtx sozotaux]
+           3D: [vozocrtx,]
+           2D: [sozocrtx, sozotaux]
+           coord_map: {'lon':'nav_lon', 'lat':'nav_lat', 'time':'time_centered', 'lev':'depthu',}
          grid_V:
-           3D: [vomecrty]
-           2D: [somecrty sometauy]
+           3D: [vomecrty,]
+           2D: [somecrty, sometauy]
+           coord_map: {'lon':'nav_lon', 'lat':'nav_lat', 'time':'time_centered', 'lev':'depthv',}
          icemod:
            3D: []
-           2D: [icethic iicevelu iicevelv isnowthi qla_ai_cea qns_ai_cea qns_io_cea qsr_ai_cea qsr_io_cea soicecov]
+           2D: [icethic, iicevelu, iicevelv, isnowthi, qla_ai_cea, qns_ai_cea, qns_io_cea, qsr_ai_cea, qsr_io_cea, soicecov]
+           coord_map: {'lon':'nav_lon', 'lat':'nav_lat', 'time':'time_centered'}
   # contained in <path>
   masks:
     landsea: 'MESHMASK/mesh_mask.nc'
