finalize data loader

--- a/zapata/catalogue.yml
+++ b/zapata/catalogue.yml
@@ -18,21 +18,21 @@ C-GLORSv7:
          grid_T:
            3D: [vosaline, votemper]
            2D: [botemper, sobotpre, sofmmflx, soheatc3, soheatct, sohefldo, sohfdamp, solatent, solongwa, somixhgt, somxl010, soqempoc, sosaline, sosaltco, sosensib, soshfldo, sossheig, sosstmax, sosstmin, sosstsst, sowaflup, sowfdamp, sowindsp,]
-           coord_map: {'lon':'nav_lon', 'lat':'nav_lat', 'time':'time_centered', 'lev':'deptht',}
+           coord_map: {'lon':['nav_lon','x'], 'lat':['nav_lat','y'], 'time':['time_centered'], 'lev':['deptht'],}
          grid_U:
            3D: [vozocrtx,]
            2D: [sozocrtx, sozotaux]
-           coord_map: {'lon':'nav_lon', 'lat':'nav_lat', 'time':'time_centered', 'lev':'depthu',}
+           coord_map: {'lon':['nav_lon','x'], 'lat':['nav_lat','y'], 'time':['time_centered'], 'lev':['depthu'],}
          grid_V:
            3D: [vomecrty,]
            2D: [somecrty, sometauy]
-           coord_map: {'lon':'nav_lon', 'lat':'nav_lat', 'time':'time_centered', 'lev':'depthv',}
+           coord_map: {'lon':['nav_lon','x'], 'lat':['nav_lat','y'], 'time':['time_centered'], 'lev':['depthv'],}
          icemod:
            3D: []
            2D: [icethic, iicevelu, iicevelv, isnowthi, qla_ai_cea, qns_ai_cea, qns_io_cea, qsr_ai_cea, qsr_io_cea, soicecov]
-           coord_map: {'lon':'nav_lon', 'lat':'nav_lat', 'time':'time_centered'}
+           coord_map: {'lon':['nav_lon','x'], 'lat':['nav_lat','y'], 'time':['time_centered'],}
   # contained in <path>
-  masks:
+  metrics:
     landsea: 'MESHMASK/mesh_mask.nc'
 
 #
@@ -56,36 +56,8 @@ ERA5_MM:
       data_stream:
          monthly: 
            3D: [U, V, W, T, Z]
-           2D: [SLP]
+           2D: [SST,]
   # Places in <path> 
   metrics:
     lon: 'np.asarray([i for i in np.arange(0,360.,0.25)])'
     lat: 'np.asarray([i for i in np.arange(-90,90.1,0.25)][::-1])'
-    oro: ERA5_quarter_global_oro.npy
-
-#
-ERA5_nc:
-  remote: False
-  path: /Users/lovato/ClimData/ERA5_nc
-  subtree: <var>
-  source_url: http://confluence.ecmwf.int/display/CKB/ERA5+data+documentation#ERA5datadocumentation-Parameterlistings
-  description: ERA5 Monthly Mean on Pressure Levels
-  year_bounds: [1979, 2018]
-  data_block: monthly
-  data_freq: monthly
-  driver: 'default'
-  levels: [10, 50, 100, 150, 200, 250, 300, 400, 500, 600, 700, 850, 925, 1000,]
-  # data
-  components:
-    atm:
-      model: 'IFS'
-      grid: {'x':1440, 'y':721, 'z':14}
-      filename: ERA5_1m_<var>_<year>.nc
-      data_stream:
-         monthly:
-           3D: [U, V, W, T, Z]
-           2D: [SLP]
-           coord_map: {'lon':['longitude'], 'lat':['latitude'], 'time':['time'], 'lev':['level'],}
-  # Places in <path>
-  metrics:
-    oro: ERA5_quarter_global_oro.npy
