--- a/environment.yml
+++ b/environment.yml
@@ -4,15 +4,18 @@ channels:
   - conda-forge
   - ncar
 dependencies:
+  # Version lock for zeus compatibility
+  - python=3.7
+  - xarray==0.15.0
+  - dask=2.12.0
+  - distributed==2.12.0
   # Multi language support:
-  - python=3.6
+  - python=3.7
   - ipython
   - numpy
   - scipy
   - matplotlib
   - netcdf4
-  - xarray
-  - dask
   - pandas
   - cartopy
   - geocat-comp
@@ -24,5 +27,6 @@ dependencies:
   - sphinx
   - seaborn
   - natsort
+  # dev only
   - pudb
   - yapf
