--- a/environment.yml
+++ b/environment.yml
@@ -9,6 +9,7 @@ dependencies:
   - xarray==0.15.0
   - dask=2.12.0
   - distributed==2.12.0
+  - cloudpickle==1.3.0
   # Multi language support:
   - python=3.7
   - ipython
