--- a/environment.yml
+++ b/environment.yml
@@ -13,6 +13,8 @@ dependencies:
   # Multi language support:
   - python=3.7
   - ipython
+  - docrep
+  - lxml
   - numpy
   - scipy
   - matplotlib
