--- a/zapata/catalogue.yml
+++ b/zapata/catalogue.yml
@@ -1,7 +1,7 @@
 BSFS-NRT_daily:
-  remote: True
-  path: /data/products/BSFS/bsfs_v3.2/analysis_daily_mean
-  subtree: <year>/<month>
+  remote: False
+  path: /Users/lstefanizzi/files/native/
+  subtree:
   source_url: http://bsfs.cmcc.it/
   description: Black Sea Forecasting System (BSFS) NRT analisys daily means
   contact: Stefania Ciliberti
@@ -113,3 +113,30 @@ ERA5_MM:
   metrics:
     lon: 'np.asarray([i for i in np.arange(0,360.,0.25)])'
     lat: 'np.asarray([i for i in np.arange(-90,90.1,0.25)][::-1])'
+
+#
+SST:
+  remote: False
+  path: /Users/lstefanizzi/files/sat/
+  subtree:
+  source_url: http://marine.copernicus.eu/
+  description: Black Sea SST, L3S, 1/16deg daily (SST_BS_SST_L3S_NRT_OBSERVATIONS_010_013_a)
+  contact: ISAC - Institute of Atmospheric Sciences and Climate (CNR - Rome)
+  year_bounds: [2014, 2019]
+  data_block: daily
+  driver: 'default'
+  levels: None
+  # data
+  components:
+    ocn:
+      model: 'NEMO 3.6'
+      filename: <year><month>*000000-GOS-L3S_GHRSST-SSTsubskin-night_SST_HR_NRT-BLK-v02.0-fv01.0.nc
+      grid: {'x':257, 'y':162}
+      data_stream:
+        L3S:
+          2D: {'sea_surface_temperature':'sea_surface_temperature', 'quality_level':'quality_level'}
+          coord_map: {'lon':'lon', 'lat':'lat', 'time':'time',}
+  # contained in <path>
+  metrics:
+    landsea: 'MESHMASK/mesh_mask.nc'
+
