--- a/zapata/catalogue.yml
+++ b/zapata/catalogue.yml
@@ -107,6 +107,34 @@ SST:
       data_stream:
         L3S:
           2D: {'sea_surface_temperature':'sea_surface_temperature', 'quality_level':'quality_level'}
+#
+#
+ERA5_MM:
+  remote: False
+  path: /data/products/ZAPATA/ERA5_MM
+  subtree: <var><lev>
+  source_url: http://confluence.ecmwf.int/display/CKB/ERA5+data+documentation#ERA5datadocumentation-Parameterlistings
+  description: ERA5 Monthly Mean on Pressure Levels (compiled by A. Navarra 2019)
+  contact: Antonio Navarra
+  year_bounds: [1979, 2018]
+  data_block: monthly
+  data_freq: monthly
+  driver: 'era5_numpy'
+  levels: [10, 50, 100, 150, 200, 250, 300, 400, 500, 600, 700, 850, 925, 1000,]
+  # data
+  components:
+    atm:
+      source: 'IFS'
+      grid: {'x':1440, 'y':721, 'z':14}
+      filename: <var>_<lev>_<year>_<mon>_MM.npy
+      data_stream:
+         monthly:
+           3D: {'U':'Zonal Wind', 'V':'Meridional Wind', 'W':'Vertical Velocity', 'T':'Temperature', 'Z':'Geopotential Height'}
+           2D: {'SST':'Sea Surface Tenperature', 'tp':'Precipitation', 'MSL':'Mean Sea Level Pressure'}
+  # Places in <path>
+  metrics:
+    lon: 'np.asarray([i for i in np.arange(0,360.,0.25)])'
+    lat: 'np.asarray([i for i in np.arange(-90,90.1,0.25)][::-1])'
 
 #
 dummy_dataset:
