--- a/zapata/catalogue.yml
+++ b/zapata/catalogue.yml
@@ -120,7 +120,7 @@ ERA5_MM:
   data_block: monthly
   data_freq: monthly
   driver: 'era5_numpy'
-  levels: [10, 50, 100, 150, 200, 250, 300, 400, 500, 600, 700, 850, 925, 1000,]
+  levels: [10., 50., 100., 150., 200., 250., 300., 400., 500., 600., 700., 850., 925., 1000.,]
   # data
   components:
     atm:
